# tetris-sfml

./: .gitignore  CMakeLists.txt  Makefile  README.txt  tetris
include/: background.h  config.h  cv_state.h  game.h  keyboard.h  playfield.h  screen.h  tetrimino.h  tetris.h  window.h
src/: keyboard.h  main.cpp  tetrimino.h  window.h
